2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Update Doxygen configuration file.

	* doc/Doxyfile.in: Update configuration file to latest version.

	* doc/DoxygenLayout.xml: Do not display 'dir' tab.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve documentation layout.

	* doc/Doxyfile.in: Enable some options.

	* doc/DoxygenLayout.xml: Change menu.

	* doc/Makefile.am: Do not use relative paths.

	* doc/doxyfuns.sty: Improve latex rendering.

2012-02-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Disable the use of installdox and fix doc
	location.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix compilation.

	* tests/linear/convolve.cc,
	* tests/linear/convolve_2x1d.cc,
	* tests/linear/convolve_directional.cc: Change math::round
	function to fun::v2v::round.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Set up documentation groups in Milena documentation.

	* doc/Doxyfile.in,
	* doc/Makefile.am: Handle correctly macros in symbol names.

	* doc/mln/accu/accu.dox,
	* doc/mln/canvas/canvas.dox,
	* doc/mln/core/image/concrete.dox,
	* doc/mln/core/image/domain_morpher.dox,
	* doc/mln/core/image/identity_morpher.dox,
	* doc/mln/core/image/images.dox,
	* doc/mln/core/image/morphers.dox,
	* doc/mln/core/image/value_morpher.dox,
	* doc/mln/core/neighb.dox,
	* doc/mln/data/data.dox,
	* doc/mln/io/io.dox,
	* doc/mln/main.dox,
	* doc/mln/morpho/morpho.dox: Set up documentation groups.

	* mln/accu/compute.hh,
	* mln/algebra/h_mat.hh,
	* mln/algebra/h_vec.hh,
	* mln/algebra/mat.hh,
	* mln/algebra/quat.hh,
	* mln/algebra/vec.hh,
	* mln/border/adjust.hh,
	* mln/border/duplicate.hh,
	* mln/border/equalize.hh,
	* mln/border/fill.hh,
	* mln/border/find.hh,
	* mln/border/get.hh,
	* mln/border/mirror.hh,
	* mln/border/resize.hh,
	* mln/border/resize_equal.hh,
	* mln/border/thickness.hh,
	* mln/canvas/browsing/backdiagonal2d.hh,
	* mln/canvas/browsing/breadth_first_search.hh,
	* mln/canvas/browsing/depth_first_search.hh,